--- a/app/views/event/suggestionSuccessDetails.scala.html
+++ b/app/views/event/suggestionSuccessDetails.scala.html
@@ -3,8 +3,8 @@
 <ul class="list-group big-margin-top">
     <li class="list-group-item">
         <div class="row">
-            <div class="col-md-3">@Messages("event.suggest.success.event-name")</div>
-            <div class="col-md-9"><a href="@eventDateSuggestionSuccess.eventLink">@eventDateSuggestionSuccess.eventName</a></div>
+            <div class="col-md-3"><strong>@Messages("event.suggest.success.event-name")</strong></div>
+            <div class="col-md-9"><strong><a href="@eventDateSuggestionSuccess.eventLink">@eventDateSuggestionSuccess.eventName</a></strong></div>
         </div>
     </li>
     <li class="list-group-item">
