--- a/app/views/event/propertiesList.scala.html
+++ b/app/views/event/propertiesList.scala.html
@@ -1,12 +1,7 @@
 @(evp: EventPropertyList)(implicit request: RequestHeader, flash: Flash = Flash.emptyCookie, messages: Messages)
 
-<ul class="list-group big-margin-top">
-    <li class="list-group-item">
-        <h3 class="list-group-item-heading">@Messages("event.prop.header")</h3>
-        <p>
-            @Messages("event.prop.body")
-        </p>
-    </li>
+<h3 class="lead big-margin-top">@Messages("event.prop.header")</h3>
+<ul class="list-group">
     @if(evp.mealType.isDefined){
         <li class="list-group-item">
             <div class="row">
@@ -98,5 +93,8 @@
             }
             </div>
         </div>
+    </li>
+    <li class="list-group-item">
+        <p><em>@Messages("event.prop.body")</em></p>
     </li>
 </ul>
