--- a/app/views/startpage/wizardModals.scala.html
+++ b/app/views/startpage/wizardModals.scala.html
@@ -1,12 +1,12 @@
 @()(implicit messages: Messages)
-<div class="startpage-wizards">
+<div class="modal-wizards">
 
     <div class="modal fade" id="guest-wizard-modal" tabindex="-1" role="dialog">
         <div class="modal-dialog" role="document">
             <div class="modal-header wiz-modal-header"><button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
             <div class="modal-content">
                 <section>
-                    <div id="guest-wizard">
+                    <div id="guest-wizard" class="hdc-green-wizard">
                         <ul class="hidden">
                             <li><a href="#wiztab1" data-toggle="tab">@Messages("startpage.wizard.tab.step1.header")</a></li>
                             <li><a href="#wiztab2" data-toggle="tab">@Messages("startpage.wizard.tab.step2.header")</a></li>
@@ -43,8 +43,8 @@
                             </div>
                             </div>
                             <ul class="pager wizard">
-                                <li class="previous" style="display: none"><a class="btn" href="javascript:void(0);"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;@Messages("startpage.wizard.pager.prev")</a></li>
-                                <li class="next"><a class="btn" href="javascript:void(0);">@Messages("startpage.wizard.pager.next")&nbsp;<span class="glyphicon glyphicon-chevron-right"></span></a></li>
+                                <li class="previous" style="display: none"><a class="btn" href="javascript:void(0);"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;@Messages("wizard.pager.prev")</a></li>
+                                <li class="next"><a class="btn" href="javascript:void(0);">@Messages("wizard.pager.next")&nbsp;<span class="glyphicon glyphicon-chevron-right"></span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -95,8 +95,8 @@
                             </div>
                             </div>
                             <ul class="pager wizard">
-                                <li class="previous" style="display: none"><a class="btn" href="javascript:void(0);"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;@Messages("startpage.wizard.pager.prev")</a></li>
-                                <li class="next"><a class="btn" href="javascript:void(0);">@Messages("startpage.wizard.pager.next")&nbsp;<span class="glyphicon glyphicon-chevron-right"></span></a></li>
+                                <li class="previous" style="display: none"><a class="btn" href="javascript:void(0);"><span class="glyphicon glyphicon-chevron-left"></span>&nbsp;@Messages("wizard.pager.prev")</a></li>
+                                <li class="next"><a class="btn" href="javascript:void(0);">@Messages("wizard.pager.next")&nbsp;<span class="glyphicon glyphicon-chevron-right"></span></a></li>
                             </ul>
                         </div>
                     </div>
